Code clean up + swagger documentation